--- a/tftpboot/grub/grub.cfg
+++ b/tftpboot/grub/grub.cfg
@@ -1,9 +1,13 @@
 set default=0
-#set timeout=0
+set timeout=1
 menuentry "MOHT Secure Computing Cluster" --unrestricted {
 	set gfxpayload=keep
 	linux /linux gfxpayload=1280x720x16,1280x720 root=/dev/nfs --- quiet 
 	initrd /initrd.gz
+}
+
+menuentry "CPU Check" --unrestricted {
+	chainloader /CpuidX64.efi
 }
 
 menuentry "Memory Test" --unrestricted {
