Switch to NFS4 for fewer firewall ports

--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -691,4 +691,7 @@ enable-tftp
 tftp-root=/netboot/tftpboot
 
 # client list must be put at the end
-dhcp-host=8c:16:45:fa:55:5c,192.168.101.2
+#dhcp-host=8c:16:45:fa:55:5c,192.168.101.2
+#dhcp-host=f4:39:09:2c:e6:c5,192.168.101.2
+dhcp-host=20:88:10:98:81:4e,192.168.101.2
+dhcp-host=f8:75:a4:bb:6d:e7,192.168.101.3
