updated to Ubuntu 24.04.2 LTS

--- a/tftpboot/grub/grub.cfg
+++ b/tftpboot/grub/grub.cfg
@@ -3,7 +3,7 @@ set timeout=1
 menuentry "MOHT Secure Computing Cluster" --unrestricted {
 	set gfxpayload=keep
 	linux /linux gfxpayload=1280x720x16,1280x720 root=/dev/nfs --- quiet 
-	initrd /initrd.gz
+	initrd /initrd
 }
 
 menuentry "CPU Check" --unrestricted {
