--- a/tftpboot/grub/grub.cfg
+++ b/tftpboot/grub/grub.cfg
@@ -6,6 +6,13 @@ menuentry "MOHT Secure Computing Cluster" --unrestricted {
 	initrd /initrd
 }
 
+menuentry "MOHT Secure Computing Cluster (NFS4)" --unrestricted {
+	set gfxpayload=keep
+	linux /linux gfxpayload=1280x720x16,1280x720 root=/dev/nfs nfs_ver=4 --- quiet 
+	initrd /initrd
+}
+
+
 menuentry "CPU Check" --unrestricted {
 	chainloader /CpuidX64.efi
 }
